welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: expected class or object definition
def fonctionTest() : Boolean={
^ColumnByColumn:9: error: Unmatched closing brace '}' ignored here
  if ((X,Y)!=(H,L)){return false} else {return true}}
                                                    ^