welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {Colonne()}
}


def fonctionTest() : Boolean={
  var L=getMondeLargeur()
  var H=getMondeHauteur()
  var X=getX()
  var Y=getY()
  if ((X,Y)!=(H,L)){return false} else {return true}}


def Colonne(){
  while (!fonctionTest){
  for (j <- 0 to L-1){
    for (i <- 0 to H-1){
      setPos(i,j)
    }
  }
  }}